--- a/store/package.json
+++ b/store/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
+    "react-spinners": "^0.17.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.4"
   },
